2005-04-01  Kevin Lussier <Kevin at codegreennetworks.com>

	* sem_timedwait.c (sem_timedwait): Increase size of temp variables to
	avoid int overflows for large timeout values.
	* implement.h (int64_t): Include or define.

2005-03-31   Dimitar Panayotov <develop at mail.bg>^M

	* pthread.h: Fix conditional defines for static linking.
	* sched.h: Liekwise.
	* semaphore.h: Likewise.
	* dll.c (PTW32_STATIC_LIB): Module is conditionally included
	in the build.

2005-03-16  Ross Johnson  <ross at callisto.canberra.edu.au>

	* pthread_setcancelstate.c: Undo the last change.

2005-03-16  Ross Johnson  <ross at callisto.canberra.edu.au>

	* pthread_once.c (pthread_once): Fix faulty 'done' check; fix a
	few races involving 'done' flag setting; fix incorrect 'done'
	assignment.

	* pthread_setcancelstate.c: Don't check for an async cancel event
	if the library is using alertable async cancel..

2005-03-14  Ross Johnson  <ross at callisto.canberra.edu.au>

	* CVS (snapshot-2005-03-08-fixes): Created branch for
	back-porting fixes to snapshot 2005-03-08.
	
	* pthread_once.c (pthread_once): Add cancellability to the
	init_routine; remove cancellability elsewhere (by disabling
	cancellability around pthread_cond_wait in particular);
	the meaning of the 'done' flag is changed but the ABI doesn't
	change as a result.

	* pthread.h (PTHREAD_ONCE_INIT): Change the 'done' flag value
	representation (does not change the value - still zero (0)).

	* implement.h (PTW32_ONCE_CLEAR): Defined.
	(PTW32_ONCE_DONE): Defined.
	(PTW32_ONCE_CANCELLED): Defined.

2005-03-08  Ross Johnson  <rpj at callisto.canberra.edu.au>

	* pthread_once.c (pthread_once): Redesigned to elliminate potential
	starvation problem.
	- reported by Gottlob Frege  <gottlobfrege at gmail.com>

	* ptw32_threadDestroy.c (ptw32_threadDestroy): Implicit threads were
	not closing their Win32 thread duplicate handle.
	- reported by Dmitrii Semii <bogolt at gmail.com>

2005-01-25  Ralf Kubis  <RKubis at mc.com>
