@@ -1,3 +1,9 @@
+2005-04-01  Ross Johnson  <ross@desk.home>
+
+	* GNUmakefile: Add target to test linking static link library.
+	* Makefile: Likewise.
+	* self1.c: Run process attach/detach routines when static linked.
+
 2005-03-16  Ross Johnson  <rpj@callisto.canberra.edu.au>
 
 	* mutex5.c: Prevent optimiser from removing asserts.
